# Lagwia

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: build-ubuntu.yml  docker-image.yml
cmake/: cotire.cmake
